assets/spec.css
/* general format */
:root {
    --offwhite: #fffbf5;
    --yello: #fff0cd;
    ---bloo: #d3edf1;
    --sand: #d3b29e;
    background-color: var(--sand);
}
.spec-title {
    font-size: xx-large;
    margin-top: 50px;
}

/* .spec-desc {
    /* padding: 30px 30px 30px 0px;
} */ */
.spec-desc-el {
    margin: 30px;
    padding: 30px;
}
.spec-details {
    margin-right: 30px;
}
.spec-teaser {
    font-style: italic;
}

.spec-cast {
    margin-left: 20px;
}

.spec-ogdev {
    margin: 20px;
        padding: 30px 30px 30px 0px;

}

.spec-age {
    color: darkgreen;
}

.spec-status {
    margin-left: 20px;
}

.info-line {
    display: inline;
}

.spec-what {
    font-weight: 600;
    margin-right: 5px;

}

.spec-when {
    font-style: italic;
}

.spec-where {
    margin-right: 5px;
}

.spec-people {
    margin-left: 5px;
    margin-top: 5px;
    margin-bottom: 10px;
}

/* .spec-person {} */

.ques {
    margin-left: 20px;
}

.spec-header {
    text-align: left;
    font-size: 18px;
}

.columns {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    flex-wrap:nowrap
}

.spec-photos {
    display: flex;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    text-align: start;
    margin: 10px;
}

 .cover-photo {
    margin-top: 20px;
     height: 300px;
            width: 300px;
            /* margin: 20px; */
} 

.prod-pic{
height: 100%;
width: 100%;
}

.one-image {

}

.project-left{
    width: 45%;
    margin-right: 30px;
    margin-left: 30px;
    max-width: 800px;
    margin-top: 40px;
}

.project-right{
    width: 55%;
    margin: 10px;
    padding: 5px;
    margin-right: 30px;

}

.press-link:hover{
    background-color: var(--offwhite);
    cursor: pointer;
    text-decoration: underline var(---bloo) 2px;
}

/* mobile formatting */
@media (max-width: 794px) {
    .columns {
        flex-direction: column-reverse;
    }


    .project-left {
        width: 80%;
        margin: auto;
        height: min-content;
    }
    .photo-col{
        display: flex;
        align-items: center;
        justify-content: center;
        flex-wrap: wrap;

    }
    

    .project-right {
        width: 100%;
        margin: auto;
    }


}

